<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".components.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/background_imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/background_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cover_imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover_image"
                android:scaleType="fitCenter"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/background_imageView" />

            <TextView
                android:id="@+id/description_label_tv"
                style="@style/subTitle"
                android:text="@string/overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover_imageView" />
            <TextView
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_label_tv" />


            <TextView
                android:id="@+id/title_tv"
                style="@style/detailMetaDescBold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cover_imageView"
                app:layout_constraintTop_toBottomOf="@+id/background_imageView" />

            <TextView
                android:id="@+id/vote_average_tv"
                style="@style/detailMetaDescBold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cover_imageView"
                app:layout_constraintTop_toBottomOf="@+id/title_tv"
                />

            <TextView
                android:id="@+id/votes_total_tv"
                style="@style/detailMetaDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cover_imageView"
                app:layout_constraintTop_toBottomOf="@+id/vote_average_tv"
                />
            <TextView
                android:id="@+id/release_date_tv"
                style="@style/detailMetaDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cover_imageView"
                app:layout_constraintTop_toBottomOf="@+id/votes_total_tv"
                />
            <ImageView
                android:id="@+id/wishListImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/wishlist_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cover_imageView"
                app:layout_constraintLeft_toLeftOf="@id/release_date_tv"
                app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_favorite_border"/>

            <View
                android:id="@+id/divider"
                style="@style/dividerStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_tv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/trailers_label_tv"
                style="@style/subTitle"
                android:text="@string/trailers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                />

            <ProgressBar
                android:id="@+id/trailerProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/trailers_label_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/trailers_error_tv"
                style="@style/detailErrorMessageStyle"
                app:layout_constraintTop_toBottomOf="@+id/trailers_label_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailerVideosRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_label_tv" />

            <View
                android:id="@+id/reviewsDivider"
                style="@style/dividerStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailerVideosRecyclerView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/reviews_label_tv"
                style="@style/subTitle"
                android:text="@string/reviews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviewsDivider"
                />

            <ProgressBar
                android:id="@+id/reviewProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/reviews_label_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/reviews_error_tv"
                style="@style/detailErrorMessageStyle"
                app:layout_constraintTop_toBottomOf="@+id/reviews_label_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_label_tv" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>